--- a/car-sales-platform/src/app/car-detail/car-detail.component.html
+++ b/car-sales-platform/src/app/car-detail/car-detail.component.html
@@ -1,23 +1,18 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h2>{{ car.make }} {{ car.model }}</h2>
-      <img *ngIf="car.picture" [src]="car.picture" alt="{{ car.make }} {{ car.model }}" style="max-width: 200px;">
-      <p>Year: {{ car.manufactureYear }}</p>
-      <p>Price: {{ car.price }}</p>
-      <p>Owner ID: {{ car.ownerId }}</p>
-      <button (click)="deleteCar()">Delete</button>
+<mat-card class="car-detail-card">
+  <mat-card-header>
+    <mat-card-title>{{ car?.make }} {{ car?.model }}</mat-card-title>
+  </mat-card-header>
 
-      <form #imageForm="ngForm" (ngSubmit)="onSubmit()">
-        <img [src]="imageUrl" class="imgArea" *ngIf="imageUrl">
-        <div class="image-upload">
-          <label for="file-input">
-            <img src="upload.jpg" />
-          </label>
-          <input id="file-input" type="file" (change)="handleFileInput($event)" />
-          <button type="submit" class="btn-large btn-submit" [disabled]="!imageForm.valid || !selectedFile"><i class="material-icons">save</i></button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
+  <img *ngIf="imageUrl" [src]="imageUrl" mat-card-image alt="{{ car?.make }} {{ car?.model }}" class="imgArea">
+
+  <mat-card-content>
+    <p>Year: {{ car?.manufactureYear }}</p>
+    <p>Price: {{ car?.price }}</p>
+    <p>Owner ID: {{ car?.ownerId }}</p>
+  </mat-card-content>
+
+  <mat-card-actions>
+    <button mat-raised-button color="warn" (click)="deleteCar()">Delete</button>
+    <button mat-raised-button color="primary" [routerLink]="['/cars', car?.id, 'edit']">Edit</button>
+  </mat-card-actions>
+</mat-card>
