--- a/car-sales-platform/src/app/car-form/car-form.component.scss
+++ b/car-sales-platform/src/app/car-form/car-form.component.scss
@@ -1,3 +1,10 @@
-.container{
-    text-align: center;
-}
+.car-form-card {
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 20px;
+  }
+  
+  mat-form-field {
+    width: 100%;
+    margin-bottom: 16px;
+  }
