--- a/car-sales-platform/src/app/car-list/car-list.component.scss
+++ b/car-sales-platform/src/app/car-list/car-list.component.scss
@@ -1,7 +1,42 @@
-.container{
-    text-align: center;
-}
-ul {
-    list-style-type: none; /* Remove default bullet points */
-    padding: 0; /* Remove default padding */
+.container {
+    padding: 20px;
+    max-width: 800px;
+    margin: auto;
+    background-color: white;
+    border-radius: 8px;
   }
+  
+  h2 {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 20px;
+  }
+  
+  .car-list-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Makes the delete button stick to the right of the title */
+    padding: 10px;
+    border-radius: 4px;
+    background: #f5f5f5;
+    margin-bottom: 10px;
+  }
+  
+  .car-details {
+    flex-grow: 1;
+  }
+  
+  .delete-button {
+    margin-left: 10px;
+  }
+  
+  .add-car-button {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+  
+    button {
+      border-radius: 4px;
+    }
+  }
+  
