--- a/car-sales-platform/src/app/app.component.html
+++ b/car-sales-platform/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nav>
   <div class="container">
-    <a routerLink="/" class="brand">SlugTrader</a>
+    <a routerLink="cars" class="brand">SlugTrader</a>
     <!-- <a routerLink="/cars" class="nav-link">Cars</a> -->
-    <a routerLink="/cars/new" class="nav-link">Login</a>
+    <a routerLink="/login" class="nav-link">Login</a>
   </div>
 </nav>
 <router-outlet></router-outlet>
